<resources>
    <string name="app_name">Seller Assistant</string>
    <string name="mButtonDetails">Подробности</string>
    <string name="mButtonSetWorkDay">Установить рабочим днём</string>
    <string name="mButtonSetWorkDayDelete">Очистить день</string>
    <string name="mButtonAddSeller">Добавить нового продавца</string>
    <string name="mButtonNext">Дальше -></string>
    <string name="mButtonExchangeRates">Курс валют от НБУ</string>
    <string name="mButtonAbout">О программе\n(инстуркции)</string>
    <string name="mButtonSaveName">Сохранить</string>
    <string name="mHintForEditText_addSeller">Введите имя</string>
    <string name="mButtonZpForMonth">Отчёты по З/П</string>
    <string name="mButtonZpForCertainMonth">Отобразить з/п за определённый месяц</string>
    <string name="mButtonDayResults">Ввод итогов дня</string>
    <string name="mButtonDayEdit">Редактировать определённый день</string>
    <string name="mButtonSaveInDayEdit">Сохранить</string>
    <string name="mMenuExit">Выход</string>
    <string name="mButtonShedule">Рабочий график</string>
    <string name="mMenuSettings">Настройки</string>
    <string name="mTextViewInSettings">Текущие %</string>
    <string name="mTextViewInSettings2">Новые %</string>
    <string name="mButtonSaveInSettings">Сохранить</string>
    <string name="title_activity_settings_activity_main">Settings</string>
    <string name="mAccesories">Аксессуары</string>
    <string name="mCard">Карточки</string>
    <string name="mPhone">Телефоны</string>
    <string name="mSTP">Ст.пакеты</string>
    <string name="mFlash">Флешки</string>
    <string name="mFoto">Фото</string>
    <string name="Term">Терминал</string>
    <string name="mSellerMenuDialogButtonNext">Продолжить</string>
    <string name="mSellerMenuDialogButtonCancel">Отмена</string>
    <string name="mExchangeRatesButtonShow">Отобразить курс за дату</string>
    <string name="mDayChangeButtonDelete">Удалить день</string>
    <string name="mDayChangeTitleForDayDelete">Вы всё правильно ввели?</string>
    <string name="mDayChangeMessageForDayDelete">Сохранить данные?</string>
    <string name="mEmptySellerReport">Этот продавец ещё не работал</string>
    <string name="mFinish">Готово</string>
    <string name="mYES">Да</string>
    <string name="mNO">Нет</string>
    <string name="mCANCEL">Отмена</string>
    <string name="mDATE">Дата: </string>
    <string name="mWasDelete">Удалено</string>
    <string name="mDialogAddSellerTitle">Введите имя</string>
    <string name="mNotDelete">НЕ УДАЛЕНО!!!\nНет такой даты</string>
    <string name="mMenuReportEdit">Редактировать день</string>
    <string name="mMenuReportDelete">Удалить день</string>
    <string name="mManualForAboutActivity">
        При первом запуске надо добавить нового продавца.
        После этого нажмите кнопку "Дальше" и выберите необходимый Вам пункт.\n\n

        Для изменения процентов от товаров, зайдите в контекстное меню,
        выберите нужную торговую точку и тип товаров.\n\n

        \"Ввод итогов дня\" - экран ввода результатов продаж за день.
        В начале надо выбрать месяц и год в который будет считаться з/п
        за этот день, далее выбрать торговую точку и дату рабочего дня, ввести результаты продаж
        в соответствующие поля. Когда всё введено, нажать кнопку сохранить.\n\n

        \"Отчёт по з/п\" - отображает отчёты по з/п.
        В начале выбираете месяц и год за которые хотите получить отчёт,
        после чего выбераете тип отчёта: общий - покажет общие результаты и
        статистику за выбраный отчётный месяц,
        подробный - отчёт по каждому рабочему дню.\n
        Терминал автоматически считается с 1го по последнее число месяца(за месяц указаный
        ВАМИ вверху в выпадающем меню).\n
        Так же, при просмотре подробного отчёта, можно открыть для редактирования или удалить
        выбраный день. Для этого надо нажать и удерживать необходимый день до появления
        контекстного меню и выбрать нужный пункт\n\n

        \"Редактировать определённый день\" - позволяет внести изменения в
        уже существующий рабочий день. Для этого сначало надо ввести дату
        за которую хотите ввести изменения (дата должна существовать! иначе что изменять?),
        после чего, откроется экран изменения с предыдущими результатами дня,
        внесите необходимы изменения и нажмите кнопку сохранить.\n\n

        \"Рабочий график\" - календарь, в котором синим показаны отработаные дни и жёлтым можно
        отмечать запланированые рабочие дни. При нажатии на отработанный день, появляется
        сообщение с названием торговой точки и становится активной кнопка "Подробности",
        при нажатии на которую покажется отчёт за дату. Для добавления метки запланированого дня,
        нажмите на пустую дату (белую) и выберите торговую точку на которой планируете работать.
        При нажатии на уже запланированую дату, её можно удалить.\n\n

        \"Курс валют от НБУ\" - позволяет посмотреть курс валют от нбу по всем валютам которые
        предоставляет НБУ, за все даты которые есть у НБУ. Для просмотра старых курсов, нажмите на
        дату и выберите ту, за которую хотите посмотреть курс.
    </string>
    <string name="mAboutTitle">Инструкции</string>
    <string name="pref_header_general">Настройки % по точкам</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings_activity_deb">SettingsD</string>
    <string name="title_activity_settings_activity_pf">Settings</string>
    <string name="mTerminal">Терминал</string>
    <string name="mDayResult">Результат: </string>
    <string name="mDate">Дата: </string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="mButtonShowReport">отобразить отчёт</string>
    <string name="mRadioButtonOverall">Общий отчёт</string>
    <string name="mRadioButtonEach">Подробный отчёт по точкам</string>
</resources>