<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.083"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DayChangeMonthSpinner"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/DayChangeYearSpinner"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DayChangePointsSpinner"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.083"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/DayChangeDateTextView"
        android:text="@string/mDate"
        android:layout_weight="0.083"
        android:gravity="bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangeCardEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangeStpEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangePhoneEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangeFlashEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangeAccesoriesEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangeFotoEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DayChangeTerminalEditText"
                android:layout_weight="0.125"
                android:inputType="numberDecimal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangeCardTextView"
                android:text="@string/mCard"
                android:layout_weight="0.125"
                android:gravity="bottom" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangeStpTextView"
                android:text="@string/mSTP"
                android:layout_weight="0.125"
                android:gravity="bottom" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangePhoneTextView"
                android:text="@string/mPhone"
                android:layout_weight="0.125"
                android:gravity="bottom" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangeFlashTextView"
                android:text="@string/mFlash"
                android:layout_weight="0.125"
                android:gravity="bottom" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangeAccesoriesTextView"
                android:text="@string/mAccesories"
                android:layout_weight="0.125"
                android:gravity="bottom" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangeFotoTextView"
                android:text="@string/mFoto"
                android:layout_weight="0.125"
                android:gravity="bottom"
                android:singleLine="false" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/DayChangeTerminalTextView"
                android:text="@string/mTerminal"
                android:layout_weight="0.125"
                android:gravity="bottom" />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DayChangeSummTextView"
        android:textSize="20sp"
        android:layout_weight="0.083"
        android:text="@string/mDayResult"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DayChangeButtonSave"
        android:textSize="20sp"
        android:text="@string/mButtonSaveInDayEdit"
        android:layout_weight="0.083"
        android:onClick="clickOnSaveButtonInDayEdit"/>
</LinearLayout>
