<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_bright">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:background="@android:color/holo_blue_bright"
        android:layout_margin="10sp"
        android:popupBackground="@android:color/darker_gray" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mButtonAddSeller"
        android:id="@+id/buttonAddSeller"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:textSize="20sp"
        android:onClick="clickForAddSeller"
        android:background="@drawable/my_button_style"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mButtonNext"
        android:id="@+id/buttonNextActivity"
        android:layout_weight="0.2"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:onClick="clickOnNextButton"
        android:background="@drawable/my_button_style"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:textSize="20sp"
        android:id="@+id/buttonExchangeRates"
        android:text="@string/mButtonExchangeRates"
        android:onClick="clickOnExchangeRates"
        android:background="@drawable/my_button_style"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAbout"
        android:textSize="20sp"
        android:layout_weight="0.16"
        android:text="@string/mButtonAbout"
        android:onClick="clickAboutProg"
        android:background="@drawable/my_button_style"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDebug"
        android:layout_weight="0.16"/>
</LinearLayout>
