<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="evgenskyline.sellerassistant.ReportActivity"
    android:background="@android:color/holo_blue_bright">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/reportActivityLinearLayoutMain">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerInMonthReport"
                android:layout_weight="0.5"
                android:popupBackground="@android:color/darker_gray"
                android:background="@android:color/holo_blue_bright" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ReportActivityYearSpinner"
                android:layout_weight="0.5"
                android:popupBackground="@android:color/darker_gray"
                android:background="@android:color/holo_blue_bright" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mButtonShowReportInMonthReport"
            android:text="@string/mButtonShowReport"
            android:onClick="clickToShowReport"
            android:background="@drawable/my_button_style"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonOverallInReport"
                android:text="@string/mRadioButtonOverall"
                android:textSize="20sp"
                android:checked="true"
                android:textStyle="bold"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonEachInReport"
                android:text="@string/mRadioButtonEach"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RadioGroup>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ReportActivityScrollView">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/textViewInMonthReport"
                android:background="@drawable/listview_style"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:textStyle="bold" />

        </ScrollView>
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reportActivityListView"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:dividerHeight="10sp"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
